--- a/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
+++ b/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
@@ -4,12 +4,7 @@
     ViewBag.Title = "Create Instance";
 }
 
-<style>
-    span{
-        color: red;
-    font-size: 14px;
-    }
-</style>
+
 <a class="card-title">Create Instance</a>
 <hr />
 <div style="padding:1em;">
@@ -27,7 +22,7 @@
                     @*<span id="lblInstanceName" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblInstanceName">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblInstanceName">&nbsp;</span>
                 </div>
             </div>
 
@@ -44,7 +39,7 @@
                     @*<span id="lblProject" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblProject">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblProject">&nbsp;</span>
                 </div>
             </div>
 
