--- a/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
@@ -2,12 +2,7 @@
     ViewBag.Title = "Create Project Creation";
 }
 
-<style>
-    span{
-        color: red;
-    font-size: 14px;
-    }
-</style>
+
 <a class="card-title" id="prjtCreate">Project Creation</a>
 <a class="card-title" id="prjtUpdate" style="display:none">Project Updation</a>
 <hr />
@@ -26,7 +21,7 @@
                     @*<span id="lblProjectName" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblProjectName">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblProjectName">&nbsp;</span>
                 </div>
             </div>
         </div>
@@ -46,7 +41,7 @@
                     @*<span id="lblCustomerName" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblCustomerName">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCustomerName">&nbsp;</span>
                 </div>
             </div>
         </div>
@@ -60,7 +55,7 @@
                     @*<span id="lblDescription" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblDescription">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblDescription">&nbsp;</span>
                 </div>
             </div>
         </div>
@@ -80,7 +75,7 @@
                     @*<span id="lblCustomerName" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblProjectManager">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblProjectManager">&nbsp;</span>
                 </div>
             </div>
         </div>
